--- a/index.php.html
+++ b/index.php.html
@@ -5,6 +5,6 @@
     <title>The Underworld</title>
 </head>
 <body>
-<h3 style="text-align: center; color:red;"></h3>
+<h3 style="text-align: center; color:red;">Welcome to the Underworld</h3>
 </body>
 </html>
